--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,15 @@
-Package: admiraltemplate
+Package: admiraldata
 Type: Package
-Title: ADaM in R Asset Library - Extension
-Version: 0.0.2
+Title: Test Data for the 'admiral' Package
+Version: 0.0.1
 Authors@R: c(
     person("Edoardo", "Mancini", email = "edoardo.mancini@roche.com", role = c("aut", "cre")))
-Description: A toolbox for programming Clinical Data Standards Interchange Consortium
-    (CDISC) compliant Analysis Data Model (ADaM) datasets in R. ADaM datasets are a
-    mandatory part of any New Drug or Biologics License Application submitted to the
-    United States Food and Drug Administration (FDA). Analysis derivations are
-    implemented in accordance with the "Analysis Data Model Implementation Guide"
-    (CDISC Analysis Data Model Team, 2021, <https://www.cdisc.org/standards/foundational/adam/adamig-v1-3-release-package>).
+Description: A set of Study Data Tabulation Model (SDTM) datasets from the Clinical
+    Data Interchange Standards Consortium (CDISC) pilot project used for testing
+    and developing Analysis Data Model (ADaM) derivations inside the 'admiral'
+    package.
 License: Apache License (>= 2)
-URL: https://pharmaverse.github.io/admiraltemplate, https://github.com/pharmaverse/admiraltemplate
+URL: https://pharmaverse.github.io/admiraldata, https://github.com/pharmaverse/admiraldata
 Encoding: UTF-8
 Language: en-US
 LazyData: true
