#1: update .yml and add back vignettes folder

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://pharmaverse.github.io/admiraltemplate
+url: https://pharmaverse.github.io/admiraldata
 
 template:
   bootstrap: 5
@@ -6,9 +6,9 @@ template:
     bootswatch: flatly
 repo:
   url:
-    home: https://github.com/pharmaverse/admiraltemplate
-    source: https://github.com/pharmaverse/admiraltemplate/blob/main/
-    issue: https://github.com/pharmaverse/admiraltemplate/issues/
+    home: https://github.com/pharmaverse/admiraldata
+    source: https://github.com/pharmaverse/admiraldata/blob/main/
+    issue: https://github.com/pharmaverse/admiraldata/issues/
     user: https://github.com/
 news:
   cran_dates: true
@@ -28,7 +28,7 @@ reference:
 
 - title: Advanced Functions
 - subtitle: Pre-Defined Source Objects
-  desc: Source objects defined by {admiraltemplate}
+  desc: Source objects defined by {admiraldata}
 - contents:
   - has_keyword("source_specifications")
 
@@ -56,7 +56,7 @@ navbar:
   components:
     getstarted:
       text: Get Started
-      href: articles/admiraltemplate.html
+      href: articles/admiraldata.html
     reference:
       text: Reference
       href: reference/index.html
