--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: pharmaversesdtm
 Type: Package
-Title: Test Data for the 'admiral' Package
+Title: Test Data for the Pharmaverse Family of Packages
 Version: 0.0.2
 Authors@R: c(
   person("Edoardo", "Mancini", email = "edoardo.mancini@roche.com", role = c("aut", "cre"))
   )
 Description: A set of Study Data Tabulation Model (SDTM) datasets from the Clinical
     Data Interchange Standards Consortium (CDISC) pilot project used for testing
-    and developing Analysis Data Model (ADaM) derivations inside the 'admiral'
-    package.
+    and developing Analysis Data Model (ADaM) derivations inside the pharmaverse 
+    family of packages.
 Language: en-US
 License: Apache License (>= 2.0)
 URL: https://pharmaverse.github.io/pharmaversesdtm, https://github.com/pharmaverse/pharmaversesdtm
