--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Description: A set of Study Data Tabulation Model (SDTM) datasets from the Clini
     family of packages.
 Language: en-US
 License: Apache License (>= 2.0)
-URL: https://pharmaverse.github.io/pharmaversesdtm, https://github.com/pharmaverse/pharmaversesdtm
+URL: https://pharmaverse.github.io/pharmaversesdtm/cran-release/, https://github.com/pharmaverse/pharmaversesdtm
 Depends: R (>= 3.5.0)
 Encoding: UTF-8
 LazyData: true
