#85: turn on markdown

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ URL: https://pharmaverse.github.io/pharmaversesdtm/main/, https://github.com/pha
 Depends: R (>= 3.5.0)
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests:
     devtools,
