--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: pharmaversesdtm
 Type: Package
-Title: Test Data for the Pharmaverse Family of Packages
+Title: SDTM Test Data for the 'Pharmaverse' Family of Packages
 Version: 0.2.0
 Authors@R: c(
   person("Edoardo", "Mancini", email = "edoardo.mancini@roche.com", role = c("aut", "cre")),
