--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,13 +13,66 @@ repo:
 news:
   cran_dates: true
 
-
 navbar:
   structure:
     left: [reference, news]
   components:
     reference:
-       text: Reference
-       href: reference/index.html
+      text: Reference
+      href: reference/index.html
 
+reference:
+  - title: "Datasets"
+    desc: "List of all available datasets."
+    contents:
+      - ae
+      - ae_ophtha
+      - ce_vaccine
+      - cm
+      - dm
+      - dm_peds
+      - dm_vaccine
+      - ds
+      - eg
+      - ex
+      - ex_ophtha
+      - ex_vaccine
+      - face_vaccine
+      - is_vaccine
+      - lb
+      - mh
+      - oe_ophtha
+      - pc
+      - pp
+      - qs_ophtha
+      - rs_onco
+      - rs_onco_imwg
+      - rs_onco_irecist
+      - rs_onco_recist
+      - sc_ophtha
+      - sdg_db
+      - smq_db
+      - suppae
+      - suppce_vaccine
+      - suppdm
+      - suppdm_vaccine
+      - suppds
+      - suppex_vaccine
+      - suppface_vaccine
+      - suppis_vaccine
+      - supprs_onco_imwg
+      - supptr_onco
+      - sv
+      - tr_onco
+      - tr_onco_recist
+      - ts
+      - tu_onco
+      - tu_onco_recist
+      - vs
+      - vs_peds
+      - vs_vaccine
 
+  - title: "Functions"
+    desc: "List of all available functions."
+    contents:
+      - get_terms
