--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,13 @@ Package: pharmaversesdtm
 Title: SDTM Test Data for the 'Pharmaverse' Family of Packages
 Version: 1.3.0
 Authors@R: c(
-    person("Edoardo", "Mancini", , "edoardo.mancini@roche.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0009-0006-4899-8641")),
-    person("Fanny", "Gautier", role = "aut",
+    person("Lina", "Patil", email = "lina.patil@cytel.com", role = c("aut", "cre")),
+    person("Fanny", "Gautier", email = "fanny.gautier@cytel.com", role = "aut",
            comment = c(ORCID = "0009-0004-3581-0131")),
+    person("Edoardo", "Mancini", email = "edoardo.mancini@roche.com", role = "aut",
+           comment = c(ORCID = "0009-0006-4899-8641")),
     person("Gayatri", "G", role = "aut"),
     person("Kangjie", "Zhang", role = "aut"),
-    person("Lina", "Patil", role = "aut"),
     person("Pooja", "Kumari", role = "aut"),
     person("Sadchla", "Mascary", role = "aut"),
     person("Stefan", "Bundfuss", role = "aut",
