--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,7 +4,7 @@
 ^pkgdown$
 ^_pkgdown\.yml$
 ^.github$
-^.lintr$
+^.lintr.R$
 ^docs$
 ^Meta$
 ^codecov\.yml$
@@ -23,3 +23,4 @@
 ^CRAN-SUBMISSION$
 ^cran-comments\.md$
 ^.devcontainer$
+^revdep
