--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -3,6 +3,8 @@ current_repo:
   repo: pharmaverse/pharmaversesdtm
   host: https://github.com
 upstream_repos:
+  - repo: pharmaverse/admiraldev
+    host: https://github.com
 downstream_repos:
   - repo: pharmaverse/admiral
     host: https://github.com
