Migrated `lb_neuro` from `admiralneuro` to `pharmaversesdtm`

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -34,3 +34,4 @@ data-raw/dm_neuro.R @jwang-lilly
 data-raw/nv_neuro.R @jwang-lilly
 data-raw/suppnv_neuro.R @jwang-lilly
 data-raw/ag_neuro.R @jwang-lilly
+data-raw/lb_neuro.R @jackychen651
