codeowners: add datasets mb, ms, be in "others"

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -34,3 +34,8 @@ data-raw/dm_neuro.R @jwang-lilly
 data-raw/nv_neuro.R @jwang-lilly
 data-raw/suppnv_neuro.R @jwang-lilly
 data-raw/ag_neuro.R @jwang-lilly
+
+# others
+data-raw/be.R @Gero1999
+data-raw/mb.R @Gero1999
+data-raw/ms.R @Gero1999
