--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -36,7 +36,7 @@ data-raw/suppnv_neuro.R @jwang-lilly
 data-raw/ag_neuro.R @jwang-lilly
 data-raw/lb_neuro.R @jackychen651
 
-# others
+# microbiology
 data-raw/be.R @Gero1999
 data-raw/mb.R @Gero1999
 data-raw/ms.R @Gero1999
