Add DT and rlang to DESCRIPTION dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,10 +35,12 @@ Suggests:
     cli,
     covr,
     devtools,
+    DT,
     knitr,
     lintr,
     metatools,
     pkgdown,
+    rlang,
     rmarkdown,
     roxygen2,
     spelling,
