use reactable instead of DT

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,12 +35,12 @@ Suggests:
     cli,
     covr,
     devtools,
-    DT,
     htmltools,
     knitr,
     lintr,
     metatools,
     pkgdown,
+    reactable,
     rlang,
     rmarkdown,
     roxygen2,
