mv vignette tab to the left of news Co-authored-by: Edoardo Mancini <53403957+manciniedoardo@users.noreply.github.com>

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,7 +34,7 @@ authors:
 
 navbar:
   structure:
-    left: [reference, news, preview]
+    left: [reference, preview, news]
   components:
     reference:
       text: Reference
