--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,8 @@ Authors@R: c(
     person("Vinh", "Nguyen", role = "aut"),
     person("Vladyslav", "Shuliar", role = "aut",
            comment = c(ORCID = "0009-0008-2354-8999")),
-    person("Gerardo Jose", "Rodriguez", "gerardo.jrac@gmail.com", role = "aut",
-           comment = c(ORCID="0000-0003-1413-0060")),
+    person("Gerardo Jose", "Rodriguez", , "gerardo.jrac@gmail.com", role = "aut",
+           comment = c(ORCID = "0000-0003-1413-0060")),
     person("Cytel Inc.", role = c("cph", "fnd")),
     person("F. Hoffmann-La Roche AG", role = c("cph", "fnd")),
     person("GlaxoSmithKline LLC", role = c("cph", "fnd"))
